# diamond-adf-code

./: 3KK.lp  CMakeLists.txt  README  README.textile  admissible.lp  base.lp  build.sh  cdeploy.sh  cf.lp  complete.lp  deploy.sh  diamond.py  grounded.lp  iccma-diamond.sh  model.lp  op.lp  opsm.lp  preferred.lp  prio_trans.lp  stable.lp  trans_prep_merge.lp  transform.pl  transform.py  transform.sh
cmake/modules/: FindLibClingo.cmake
go/: README.textile
go/src/diamond/: diamond  diamond.go  model-graph  model2dot.rb  models2dot.rb  probo-diamond.sh
include/diamond/: App.hpp  AppOptions.hpp  EmptyMessagePrinter.hpp  InitException.hpp  UsageOutput.hpp
include/diamond/semantics/: Admissible.hpp  Complete.hpp  ConflictFree.hpp  Grounded.hpp  ISemantics.hpp  ITwoStep.hpp  Model.hpp  Naive.hpp  Preferred.hpp  Semantics.hpp  SemiModel.hpp  StableModel.hpp  Stage.hpp
lib/: 3KK.lp  ac2cico.lp  admissible.lp  afop.lp  base.lp  bipcheck.lp  bop.lp  cf.lp  cfi.lp  complete.lp  fmodel.lp  fop.lp  grounded.lp  imax.lp  linktypes.lp  model.lp  naiD.lp  op.lp  opsm.lp  pref.lp  pref.py  preferred.lp  prfD.lp  prio_trans.lp  repr_change.lp  rmax.lp  semD.lp  show.lp  show_iccma.lp  stable.lp  stgD.lp  theorybase.lp  theorybase2badf.lp  trans_prep_merge.lp  transform.pl  transform.py  twovalued.lp
lib/adf2dadf/: adf2dadf_adm.py
lib/tools/: claspresult.py  formulatree.lp  formulatree.py  utils.py
src/: main.cpp
src/diamond/: AppOptions.cpp  UsageOutput.cpp  config.h.cmake
src/diamond/semantics/: Admissible.cpp  Complete.cpp  ConflictFree.cpp  Grounded.cpp  ISemantics.cpp  ITwoStep.cpp  Model.cpp  Naive.cpp  Preferred.cpp  SemiModel.cpp  StableModel.cpp  (+1 more)
toy_instances/: 001.dl  002.dl  003.dl  004.dl  005.dl  006.dl  007.dl  008.dl  009.dl  010.dl  011.dl  013.adf  014.badf  014.dl  100.dl  201.adf  201.dl  320.adf  exampletb.lp
(+26 files in other folders)
